# review-anything

./: .gitignore  PROJECT_GUIDE.md  README.md
.github/workflows/: build.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
shared/api-spec/: openapi.json
shared/db-schema/: schema.sql
web/: start.sh  stop.sh
web/backend/: pyproject.toml
web/backend/app/: database.py  main.py  models.py
web/backend/app/routers/: checkin.py  config.py  notes.py  review.py  sections.py
web/backend/app/services/: llm.py  parser.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: App.jsx  api.js
web/frontend/src/components/: CheckInCalendar.jsx  ConfigModal.jsx  NotesManager.jsx  ReviewCard.jsx  (+4 more)
windows/: ReviewAnything.sln
windows/ReviewAnything/: App.xaml  App.xaml.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs  ReviewAnything.csproj
windows/ReviewAnything.Core/: Class1.cs
windows/ReviewAnything/Models/: CheckIn.cs  Chunk.cs  Config.cs  Note.cs  ReviewItem.cs
windows/ReviewAnything/Services/: AppDbContext.cs  LlmService.cs  MarkdownParser.cs  ReviewService.cs  ZipExtractor.cs
windows/ReviewAnything/ViewModels/: CheckInViewModel.cs  MainViewModel.cs  NotesViewModel.cs  ReviewViewModel.cs  SettingsViewModel.cs  UploadViewModel.cs
windows/ReviewAnything/Views/: CheckInPage.xaml  CheckInPage.xaml.cs  NotesPage.xaml  NotesPage.xaml.cs  ReviewPage.xaml  ReviewPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  UploadPage.xaml  UploadPage.xaml.cs
(+35 files in other folders)
