[project]
name = "review-anything-backend"
version = "1.0.0"
description = "Review Anything Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.9.2",
    "python-multipart==0.0.17",
    "aiohttp==3.11.0",
    "aiofiles==24.1.0",
    "openai>=2.37.0",
]

[tool.uv]
python-downloads = "automatic"
